5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1601_1800.log
== TEST (2019-03-24 18:14:35) 
-- CODE:
a= float(input("digite um numero:"))
b= float(input("digite um numero:"))
c= float(input("digite um numero:"))
a+b+c>0
(a**2+b**2+c**2)/a+b+c

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:16:15) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))
a+b+c>0
valor= (a**2+b**2+c**2)/a+b+c
print(round())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a+b+c>0
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:16:30) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))
a+b+c>0
valor= (a**2+b**2+c**2)/a+b+c
print(round(valor, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a+b+c>0
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:16:57) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))
valor= (a**2+b**2+c**2)/a+b+c
print(round(valor, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= (a**2+b**2+c**2)/a+b+c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:17:42) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))
valor= (a**2)+(b**2)+(c**2)/(a+b+c)
print(round(valor, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= (a**2)+(b**2)+(c**2)/(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:18:35) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))

 (a**2)+(b**2)+(c**2)/(a+b+c)
print(round(valor, 6))

-- ERROR:
File "XXXX", line 5
    (a**2)+(b**2)+(c**2)/(a+b+c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:18:42) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))
(a**2)+(b**2)+(c**2)/(a+b+c)
print(round(valor, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    (a**2)+(b**2)+(c**2)/(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:19:27) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))
(a**2)+(b**2)+(c**2)//(a+b+c)

print(round(valor, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    (a**2)+(b**2)+(c**2)//(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:19:52) 
-- CODE:
vara= float(input("digite um numero:"))
varb= float(input("digite um numero:"))
varc= float(input("digite um numero:"))
(a**2)+(b**2)+(c**2)%(a+b+c)

print(round(valor, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    (a**2)+(b**2)+(c**2)%(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:21:06) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
(a**2)+(b**2)+(c**2)/(a+b+c)

print(round(valor, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(valor, 6))
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:21:48) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
total=(a**2)+(b**2)+(c**2)/(a+b+c)

print(round(total, 6))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:23:07) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
total=(a**2)+(b**2)+(c**2)/(a+b+c)

print(round(total, 6))

-- EXECUTION TIME:
0.146702
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.365482
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.018868
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:23:22) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
total=(a**2)+(b**2)+(c**2)/(a+b+c)
print(round(total, 6))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:23:30) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
total=(a**2)+(b**2)+(c**2)/(a+b+c)
print(round(total, 6))

-- EXECUTION TIME:
0.133155
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.365482
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.018868
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:24:02) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
(a**2)+(b**2)+(c**2)/(a+b+c)
print(round(x, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 6))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:25:58) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
(a**2)+(b**2)+(c**2)/(a+b+c)
print(round(, 6))

-- ERROR:
File "XXXX", line 5
    print(round(, 6))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:26:17) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
total = (a**2)+(b**2)+(c**2)/(a+b+c)
print(round(total, 6))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:27:18) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
total = (a**2)+(b**2)+(c**2)/(a+b+c)
total = (a**2)+(b**2)+(c**2)%(a+b+c)
print(round(total, 6))

-- OUTPUT:
1025.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:27:32) 
-- CODE:
a = float(input("digite um numero:"))
b = float(input("digite um numero:"))
c = float(input("digite um numero:"))
total = (a**2)+(b**2)+(c**2)/(a+b+c)
total = (a**2)+(b**2)+(c**2)%(a+b+c)
print(round(total, 6))

-- EXECUTION TIME:
0.170893
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1025.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215585.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22504.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:00:57) 
-- CODE:
varA = float(input("digite um numero:" ))
varB = float(input("digite um numero:"))
varC = float(input("digite um numero:"))
total = (a**2)+(b**2)+(c**2)/(a+b+c)
total = (a**2)+(b**2)+(c**2)%(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (a**2)+(b**2)+(c**2)/(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:01:16) 
-- CODE:
varA = float(input("digite um numero:" ))
varB = float(input("digite um numero:"))
varC = float(input("digite um numero:"))
totalA = (a**2)+(b**2)+(c**2)/(a+b+c)
total = (a**2)+(b**2)+(c**2)%(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalA = (a**2)+(b**2)+(c**2)/(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:01:28) 
-- CODE:
varA = float(input("digite um numero:" ))
varB = float(input("digite um numero:"))
varC = float(input("digite um numero:"))
totalA = (a**2)+(b**2)+(c**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalA = (a**2)+(b**2)+(c**2)/(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:01:39) 
-- CODE:
varA = float(input("digite um numero:" ))
varB = float(input("digite um numero:"))
varC = float(input("digite um numero:"))
totalA = (a**2)+(b**2)+(c**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalA = (a**2)+(b**2)+(c**2)/(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:02:24) 
-- CODE:
varA = float(input("digite um numero:" ))
varB = float(input("digite um numero:" ))
varC = float(input("digite um numero:" ))
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total, 6))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:07:01) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))

print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total, 6))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:09:25) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    (a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:09:43) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    (a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:10:38) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    (a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:14) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
total=(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:14) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
total=(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:22) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
total=(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:23) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
total=(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:11:39) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    (a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:12:30) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
total=(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:13:12) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
total=(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 00:13:29) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
from math import *
total=(a**2+b**2+C**2)/(a+b+c)
print(round(total, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(a**2+b**2+C**2)/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:25:53) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
total=((a**2+b**2+C**2))/(a+b+c)
print(round(total, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=((a**2+b**2+C**2))/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:26:35) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
total=((a**2) + (b**2) + (C**2))/(a+b+c)
print(round(total, 71))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=((a**2) + (b**2) + (C**2))/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:27:03) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
total=((a**2) + (b**2) + (C**2))/(a+b+c)
print(round(total, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=((a**2) + (b**2) + (C**2))/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:27:49) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
soma =((a**2) + (b**2) + (C**2))/(a+b+c)
print(round(soma, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma =((a**2) + (b**2) + (C**2))/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:28:33) 
-- CODE:
a = float(input("digite um numero:" ))
b = float(input("digite um numero:" ))
c = float(input("digite um numero:" ))
soma =((a**2) + (b**2) + (C**2))/(a+b+c)
print(round(soma ,7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma =((a**2) + (b**2) + (C**2))/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:29:15) 
-- CODE:
a = int(input("digite um numero:" ))
b = int(input("digite um numero:" ))
c = int(input("digite um numero:" ))
soma =((a**2) + (b**2) + (C**2))/(a+b+c)
print(round(soma ,7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma =((a**2) + (b**2) + (C**2))/(a+b+c)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:29:38) 
-- CODE:
a = int(input("digite um numero:" ))
b = int(input("digite um numero:" ))
c = int(input("digite um numero:" ))
soma = ((a**2) + (b**2) + (C**2))/(a+b+c)
print(round(soma ,7))

-- EXECUTION TIME:
0.153715
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1800/main.py", line 4, in <module>
    soma = ((a**2) + (b**2) + (C**2))/(a+b+c)
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:30:04) 
-- CODE:
a = int(input("digite um numero:" ))
b = int(input("digite um numero:" ))
c = int(input("digite um numero:" ))
soma = ((a**2) + (b**2) + (c**2))/(a+b+c)
print(round(soma ,7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:30:21) 
-- CODE:
a = int(input("digite um numero:" ))
b = int(input("digite um numero:" ))
c = int(input("digite um numero:" ))
soma = ((a**2) + (b**2) + (c**2))/(a+b+c)
print(round(soma ,7))

-- EXECUTION TIME:
0.120519
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
